oc/onprem/mssql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rosa-poc
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: mssql
        image: harbor.krungsri.net/kscloud/rosa-poc-db:latest
        ports:
        - containerPort: 1433
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
          runAsNonRoot: true
      imagePullSecrets:
      - name: harbor-pull-secret
