oc/onprem/app-service.yml
# App Service
apiVersion: v1
kind: Service
metadata:
  namespace: rosa-poc
  name: app-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: python-app
