oc/onprem/mssql-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: rosa-poc
  name: database
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
