oc/onprem/app-route.yml
# 7. Route (Expose App to Internet)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: rosa-poc
  name: app-route
spec:
  host: uat-hybridcloud.krungsri.com
  to:
    kind: Service
    name: app-service
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGTzCCBTegAwIBAgIQDT6ecM9kGjmLiSCb6tpwpDANBgkqhkiG9w0BAQsFADBZ
[...]
      C3UjrI025n2Hq1SgiYvBuZteUoop0/3kSM3bKe/v3mk0sx8=
      -----END CERTIFICATE-----
    key: |
      -----BEGIN EC PRIVATE KEY-----
      MIGkAgEBBDAuDVTv57v3MrzFCKHtsvm/aiKtFA22KOa3fp4PIeRiRF0zX7QiRh6t
[...]
      93o1BsdvR1dXdWXoSlgBfPN1IlLNwQc=
      -----END EC PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEyDCCA7CgAwIBAgIQDPW9BitWAvR6uFAsI8zwZjANBgkqhkiG9w0BAQsFADBh
[...]
      JCqVJUzKoZHm1Lesh3Sz8W2jmdv51b2EQJ8HmA==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDjjCCAnagAwIBAgIQAzrx5qcRqaC7KGSxHQn65TANBgkqhkiG9w0BAQsFADBh
[...]
      MrY=
      -----END CERTIFICATE-----
